Remove paidForTagAgent and its uses
Because redundant now that logos no longer served from DFP.

--- a/applications/app/views/fragments/crosswords/crosswordFooter.scala.html
+++ b/applications/app/views/fragments/crosswords/crosswordFooter.scala.html
@@ -7,7 +7,7 @@
         <div class="js-repositioned-comments content__repositioned-comments"></div>
     }
 
-    @fragments.onwardPlaceholder(crosswordPage.content.commercial.isAdvertisementFeature)
+    @fragments.onwardPlaceholder(isAdvertisementFeature = false)
 
     @if(!crosswordPage.content.content.shouldHideAdverts && crosswordPage.content.commercial.needsHighMerchandisingSlot(Edition(request))) {
         <div class="fc-container fc-container--commercial">
