--- a/common/app/views/commercial/containers/paidContainer.scala.html
+++ b/common/app/views/commercial/containers/paidContainer.scala.html
@@ -9,23 +9,15 @@
 @import views.html.fragments.inlineSvg
 @import views.support.commercial.TrackingCodeBuilder.mkInteractionTrackingCode
 
-<div data-id="@containerModel.id" class="fc-container@if(containerModel.isSingleSponsorContainer){ js-sponsored-container}"
-    @for(brandingAttributes <- containerModel.brandingAttributes){
-        data-sponsorship="@brandingAttributes.sponsorshipType"
-        @for(sponsor <- brandingAttributes.sponsor){ data-sponsor="@sponsor" }
-        @for(keywordId <- brandingAttributes.keywordId){ data-keywords="@keywordId" }
-        @for(seriesId <- brandingAttributes.seriesId){ data-series="@seriesId"}
-    }
-    >
+<div data-id="@containerModel.id" class="fc-container">
     @containerWrapper(
         Seq("legacy", "capi", "paidfor", "tone-paidfor"),
         optKicker = Some(fragments.commercial.paidForMeta(Some(containerModel.id))),
         optStamp = Some(stamp),
         optBadge = if(containerModel.isSingleSponsorContainer){ Some(logoSlot) } else { None }
     ){
-
-        <a class="adverts__logo u-text-hyphenate" href="/@containerModel.content.targetUrl">@containerModel.content.title</a>
-
+        <a class="adverts__logo u-text-hyphenate"
+           href="/@containerModel.content.targetUrl">@containerModel.content.title</a>
     }{
 
         @containerModel.layoutName match {
