Remove paid-for-tags report
As now redundant.

--- a/admin/app/views/commercial/commercialMenu.scala.html
+++ b/admin/app/views/commercial/commercialMenu.scala.html
@@ -30,7 +30,7 @@
                 <div class="panel-body">
                     <ul>
                         <li><a href="@controllers.admin.routes.CommercialController.renderSpecialAdUnits()">Special Ad Units</a></li>
-                        <li><a href="@controllers.admin.routes.CommercialController.renderPaidForTags()">Paid-For Tags</a></li>
+                        <li><a href="https://tagmanager.gutools.co.uk/sponsorship">Sponsorships</a></li>
                         <li><a href="@controllers.admin.routes.CommercialController.renderInlineMerchandisingTargetedTags()">Inline Merchandising Slot</a></li>
                         <li><a href="@controllers.admin.routes.CommercialController.renderHighMerchandisingTargetedTags()">High Merchandising Slot</a></li>
                         <li><a href="@controllers.admin.routes.CommercialController.renderPageskins()">Pageskins</a></li>
