--- a/common/app/views/fragments/analytics/google.scala.html
+++ b/common/app/views/fragments/analytics/google.scala.html
@@ -26,7 +26,7 @@
     if (guardian.config.user) {
         identityId = guardian.config.user.id;
     }
-    var isLoggedIn = !!identityId;
+    var isLoggedIn = (!!identityId).toString();
 
     @***************************************************************************************
     * Standard copy 'n paste Google Analytics code                                         *
