--- a/common/app/views/fragments/nav/newHeaderMenu.scala.html
+++ b/common/app/views/fragments/nav/newHeaderMenu.scala.html
@@ -1,13 +1,14 @@
 @()(implicit request: RequestHeader)
 
 @import common.{ NewNavigation, LinkTo, Edition }
-@import conf.Configuration
 @import conf.switches.Switches.SearchSwitch
 
 @sectionList(topLevelSection: NewNavigation.EditionalisedNavigationSection) = {
     <li class="main-navigation__item navigation-border js-navigation-item">
         <details class="js-close-nav-list main-navigation__primary-list" id="primary-list-@topLevelSection.name" open>
-            <summary class="main-navigation__item__button js-navigation-button">
+            <summary class="main-navigation__item__button js-navigation-button"
+                data-link-name="main-navigation-section : @topLevelSection.name">
+
                 <i class="main-menu__icon main-menu__icon--chevron"></i>
                 @topLevelSection.name
             </summary>
@@ -22,7 +23,7 @@
 
                     @topLevelSection.getEditionalisedNavLinks(edition).map { sectionItem =>
                         <li class="navigation-group__item">
-                            <a href="@LinkTo { @sectionItem.url }" data-link-name="@sectionItem.name">@sectionItem.name</a>
+                            <a href="@LinkTo { @sectionItem.url }" data-link-name="main-navigation-item : @sectionItem.name">@sectionItem.name</a>
                         </li>
                     }
                 </ul>
@@ -31,7 +32,12 @@
     </li>
 }
 
-<label for="main-menu-toggle" class="main-menu-container__overlay" aria-hidden="true"></label>
+<label
+    for="main-menu-toggle"
+    class="main-menu-container__overlay"
+    aria-hidden="true"
+    data-link-name="main-navigation : toggle"
+></label>
 
 <div class="main-menu-container">
 
