track hiding / showing menu

--- a/common/app/views/fragments/nav/newHeaderMenu.scala.html
+++ b/common/app/views/fragments/nav/newHeaderMenu.scala.html
@@ -36,7 +36,7 @@
     for="main-menu-toggle"
     class="main-menu-container__overlay"
     aria-hidden="true"
-    data-link-name="main-navigation : toggle"
+    data-link-name="main-navigation : overlay"
 ></label>
 
 <div class="main-menu-container">
