Refactor logo templates

--- a/common/app/views/commercial/cards/itemCard.scala.html
+++ b/common/app/views/commercial/cards/itemCard.scala.html
@@ -1,6 +1,6 @@
 @import cards.{CardType, Standard}
 @import layout.{FaciaWidths, ItemClasses}
-@import views.html.fragments.commercial.contentLogo
+@import views.html.fragments.commercial.cardLogo
 @import views.html.fragments.inlineSvg
 @import views.html.fragments.items.elements.facia_cards.image
 @import views.support.commercial.CssClassBuilder
@@ -35,7 +35,7 @@
     </a>
     @if(useCardBranding) {
         @for(branding <- item.branding) {
-            @contentLogo(branding, isInteractivePage = false, isBranded = true, isOnTheLeft = false)
+            @cardLogo(branding, isStandardSizeCard = true)
         }
     }
 </div>
