--- a/common/app/views/fragments/commercial/badge.scala.html
+++ b/common/app/views/fragments/commercial/badge.scala.html
@@ -1,7 +1,7 @@
 @(content: model.ContentType, page: model.Page)(implicit request: RequestHeader)
 @import common.Edition
-@import views.html.fragments.commercial.contentLogo
+@import views.html.fragments.commercial.pageLogo
 
-@for(branding <- page.branding(Edition(request))) {
-    @contentLogo(branding, content.tags.isInteractive, isBranded = false, isOnTheLeft = true)
-}
+    @for(branding <- page.branding(Edition(request))) {
+        @pageLogo(branding, content.tags.isInteractive)
+    }
