--- a/common/app/views/fragments/imageFigure.scala.html
+++ b/common/app/views/fragments/imageFigure.scala.html
@@ -10,7 +10,8 @@
     widthsByBreakpoint: layout.WidthsByBreakpoint = MainMedia.inline,
     image_figureClasses: Option[(model.ImageAsset, String)] = None,
     shareInfo: Option[(Seq[model.ShareLink], String)] = None,
-    amp: Boolean = false
+    amp: Boolean = false,
+    doCaption: Boolean = true
 )(implicit request: RequestHeader)
 
 
@@ -61,8 +62,10 @@
                 }
             }
         }
-        @showcaseFeature{
-            @caption(picture, imageOption, isMain)
+        @if(doCaption) {
+            @showcaseFeature{
+                @caption(picture, imageOption, isMain)
+            }
         }
     </figure>
 
