--- a/common/app/views/fragments/nav/userAccountLinks.scala.html
+++ b/common/app/views/fragments/nav/userAccountLinks.scala.html
@@ -7,7 +7,7 @@
 
     <li class="navigation-group__item navigation-group__item--user-account js-show-user-account-links">
         <div class="user-account__login">
-            <a href="@Configuration.id.url/signin?INTCMP=DOTCOM_HEADER_SIGNIN">
+            <a href="@Configuration.id.url/signin?INTCMP=DOTCOM_HEADER_SIGNIN" data-link-name="Sign in">
                 @fragments.inlineSvg("profile", "icon", List("main-menu__icon", "main-menu__icon--profile"))
                 Sign in
             </a>
