--- a/admin/app/views/troubleshooterResults.scala.html
+++ b/admin/app/views/troubleshooterResults.scala.html
@@ -3,7 +3,7 @@
 @admin_main("Troubleshooting results", "PROD", isAuthed = true) {
 
     <div class="row-fluid">
-        <h4>@loadbalancer.fold("Unknown loadbalancer")(lb => s"${lb.name} (${lb.project})")</h4>
+        <h4>@loadbalancer.map(lb => s"${lb.name} (${lb.project})").getOrElse("Unknown loadbalancer")</h4>
         <p>Failures are in order - the cause of the error will most likely be at the level of the first failure</p>
     </div>
     <table class="table table-striped table-bordered">
