--- a/applications/app/views/fragments/interactiveBody.scala.html
+++ b/applications/app/views/fragments/interactiveBody.scala.html
@@ -1,16 +1,17 @@
 @(page: InteractivePage)(implicit request: RequestHeader)
 @import common.Edition
-@import views.support.{RenderClasses, InteractiveCleaner}
+@import views.support.RenderClasses
 @import views.support.TrailCssClasses.toneClass
-@import conf.switches.Switches.interactivePressing
+@import views.InteractiveBodyCleaner
 @import views.support.Commercial._
 
 @body(page.interactive, page.item.content.isImmersive, isPaidContent(page.interactive, page))
 
 @bodyRaw(interactive: model.Interactive) = {
     @interactive.maybeBody.map { body =>
-        @HtmlFormat.raw(body)
+        @InteractiveBodyCleaner(interactive)
     }.getOrElse {
+        @* legacy support? *@
         <figure class="interactive" data-interactive="@{conf.Configuration.interactive.url}@{request.path.drop(1)}/boot.js"></figure>
     }
 }
@@ -18,15 +19,7 @@
 @body(interactive: model.Interactive, isImmersive: Boolean, isPaidContent: Boolean) = {
     @if(isImmersive) {
         <div class="@RenderClasses(Map("paid-content--advertisement-feature" -> isPaidContent))">
-            @if(interactive.hasSrcdoc) {
-                @if(interactivePressing.isSwitchedOn) {
-                    @HtmlFormat.raw(InteractiveCleaner(interactive.fields.body))
-                } else {
-                    @bodyRaw(interactive)
-                }
-            } else {
-                @interactive.figureEl.map(HtmlFormat.raw(_))
-            }
+            @bodyRaw(interactive)
         </div>
     } else {
         <div class="l-side-margins">
@@ -56,11 +49,7 @@
 
                     <div class="gs-container" data-test-id="interactive-content-body">
                         <div class="content__main-column content__main-column--interactive">
-                            @if(!isImmersive) {
-                                @bodyRaw(interactive)
-                            } else {
-                                @HtmlFormat.raw(interactive.fallbackEl)
-                            }
+                            @bodyRaw(interactive)
                         </div>
                     </div>
 
