--- a/commercial/app/views/hosted/guardianHostedVideo.scala.html
+++ b/commercial/app/views/hosted/guardianHostedVideo.scala.html
@@ -134,18 +134,9 @@
                     </div>
                 </div>
             </div>
-            @for(nextPage <- page.nextPage) {
-            <div class="hosted__next-video">
-                <div class="hosted__next-video--header">
-                    <h2 class="hosted__text hosted__next-video--up-next">More from</h2>
-                    <h2 class="hosted__next-video--client-name hosted-tone">@{page.campaign.owner}</h2>
-                </div>
-                <a href="@{nextPage.pageUrl}" class="hosted__next-video--tile js-next-video" data-colour="@{page.campaign.fontColour.brandColour}" data-link-name="Next Hosted Video: @{nextPage.title}">
-                    <img class="hosted__next-video-thumb" src="@{nextPage.imageUrl}" alt="Next Video: @{nextPage.title}">
-                    <p class="hosted__next-video-title">@{nextPage.title}</p>
-                </a>
-            </div>
-            }
+
+            <div class="js-onward-placeholder"></div>
+
         </section>
         @guardianHostedCta(page, page.cta)
     </div>
