--- a/common/app/views/fragments/nav/newHeaderMenu.scala.html
+++ b/common/app/views/fragments/nav/newHeaderMenu.scala.html
@@ -8,7 +8,7 @@
     <li class="main-navigation__item navigation-border js-navigation-item">
         <details class="js-close-nav-list main-navigation__primary-list" id="primary-list-@topLevelSection.name" open>
             <summary class="main-navigation__item__button js-navigation-button">
-                <i class="main-navigation__icon"></i>
+                <i class="main-menu__icon main-menu__icon--chevron"></i>
                 @topLevelSection.name
             </summary>
 
@@ -53,7 +53,7 @@
                         @* label surrounding the input and icon so that if you click the search icon it will trigger the submit *@
                         <label for="submit-google-search">
                             <input class="u-h" type="submit" id="submit-google-search">
-                            @fragments.inlineSvg("search-36", "icon", List("navigation-group__icon", "navigation-group__search-icon"))
+                            @fragments.inlineSvg("search-36", "icon", List("main-menu__icon", "main-menu__icon--search"))
                         </label>
                         <label for="q" class="u-h">What term do you want to search?</label>
                     </form>
@@ -61,14 +61,22 @@
             </ul>
         }
 
-        <ul class="navigation-group navigation-no-border navigation-group--grey secondary-navigation">
+        <ul class="navigation-group navigation-group--grey secondary-navigation">
 
             <li class="navigation-group__item js-editionalise-secondary-nav"
                 @* TODO: should membership really only show up in the uk edition? *@
                 data-edition="uk">
                     <a href="@Configuration.id.membershipUrl/supporter?INTCMP=DOTCOM_HEADER_BECOMEMEMBER_UK">
-                        @fragments.inlineSvg("marque-36", "icon", List("navigation-group__icon", "navigation-group__membership-icon"))
+                        @fragments.inlineSvg("marque-36", "icon", List("main-menu__icon", "main-menu__icon--membership"))
                         membership
+                    </a>
+            </li>
+
+            <li class="navigation-group__item js-editionalise-secondary-nav"
+                data-edition="uk">
+                    <a href="@Configuration.id.membershipUrl/supporter?INTCMP=DOTCOM_HEADER_BECOMEMEMBER_UK">
+                        @fragments.inlineSvg("device", "icon", List("main-menu__icon", "main-menu__icon--subscribe"))
+                        subscribe
                     </a>
             </li>
 
@@ -92,11 +100,11 @@
 
         <ul class="navigation-group navigation-border secondary-navigation">
             <li class="navigation-group__item"><a href="https://www.facebook.com/theguardian">
-                @fragments.inlineSvg("share-facebook", "icon", List("navigation-group__icon", "navigation-group__social-icon"))
+                @fragments.inlineSvg("share-facebook", "icon", List("main-menu__icon", "main-menu__icon--social"))
                 Facebook
             </a></li>
             <li class="navigation-group__item"><a href="https://twitter.com/guardian">
-                @fragments.inlineSvg("share-twitter", "icon", List("navigation-group__icon", "navigation-group__social-icon"))
+                @fragments.inlineSvg("share-twitter", "icon", List("main-menu__icon", "main-menu__icon--social"))
                 Twitter
             </a></li>
         </ul>
