--- a/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
+++ b/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
@@ -458,36 +458,35 @@ $navigation-horizontal-padding: $gs-gutter * 2 + $gs-gutter/2;
     &::-webkit-details-marker {
         display: none;
     }
+
+    .main-menu__icon--chevron:before {
+        border-color: $news-support-2;
+    }
 }
 
-.main-navigation__icon {
-    top: .26em;
-
+.main-menu__icon--chevron {
     &:before {
         content: '';
         display: inline-block;
-        width: .4em;
-        height: .4em;
-        border: 2px solid $news-support-2;
+        width: 8px;
+        height: 8px;
         transform: rotate(-45deg);
+        border-width: 2px;
+        border-style: solid;
         border-top: 0;
         border-left: 0;
         //optical alignment
-        margin-left: -.2em;
+        margin-left: -2px;
     }
 
     details[open] &:before {
         transform: rotate(45deg);
+        margin-bottom: 4px;
         margin-left: 0;
-    }
-
-    details[open] & {
-        top: .08em;
     }
 }
 
-.main-navigation__icon,
-.navigation-group__icon {
+.main-menu__icon {
     position: absolute;
     left: $gs-gutter/2;
     text-align: center;
@@ -538,7 +537,7 @@ $navigation-horizontal-padding: $gs-gutter * 2 + $gs-gutter/2;
 .navigation-group--grey {
     background-color: $neutral-1;
 
-    .navigation-group__icon {
+    .main-menu__icon__svg {
         fill: $neutral-2;
     }
 }
@@ -576,20 +575,12 @@ $navigation-horizontal-padding: $gs-gutter * 2 + $gs-gutter/2;
     }
 }
 
-.navigation-group__icon {
-    top: .3em;
-
-    svg {
-        display: inline-block;
-    }
-}
-
-.navigation-group__social-icon {
+.main-menu__icon--social {
     fill: $news-support-2;
-    top: -.2em;
+    top: -.14em;
 }
 
-svg.navigation-group__social-icon__svg {
+svg.main-menu__icon--social__svg {
     width: 1.8em;
     height: 1.8em;
 }
@@ -626,18 +617,19 @@ svg.navigation-group__social-icon__svg {
             color: $neutral-3;
         }
 
-        & ~ label .navigation-group__search-icon {
+        & ~ label .main-menu__icon--search {
             fill: $neutral-2;
         }
     }
 }
 
-.navigation-group__search-icon {
+.main-menu__icon--search {
     fill: $news-support-2;
     top: $gs-baseline/2;
 }
 
 .navigation-group__item--user-account {
+    padding-bottom: $gs-baseline;
 
     .user-account__signed-in {
         display: none;
@@ -647,14 +639,26 @@ svg.navigation-group__social-icon__svg {
         .user-account__signed-in {
             display: block;
         }
+
         .user-account__login {
             display: none;
+        }
+
+        .main-menu__icon--chevron:before {
+            border-color: $neutral-2;
         }
     }
 }
 
+.user-account__signed-in__links {
+    margin-left: 0;
+    margin-bottom: -$gs-baseline;
+    padding-bottom: $gs-baseline;
+    background-color: rgba(0, 0, 0, .15);
+}
+
 .user-account__signed-in__link {
-    color: $neutral-3;
+    color: #ffffff;
 }
 
 .no-text-transform {
