--- a/common/app/views/mainAMP.scala.html
+++ b/common/app/views/mainAMP.scala.html
@@ -11,7 +11,7 @@
     <head>
         @* "utf-8" meta tag needs to be first according to AMP spec *@
         <meta charset="utf-8">
-        <meta name="amp-3p-iframe-src" content="http://localhost:8080/amp_remote.html">
+        <meta name="amp-3p-iframe-src" content="https://www.theguardian.com/amp/remote.html">
         @fragments.metaData(page, amp = true)
         <title>@views.support.Title(page)</title>
         @fragments.amp.stylesheets.main(page.metadata)
