--- a/static/src/stylesheets/module/commercial/glabs/_hosted.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted.scss
@@ -485,21 +485,27 @@ $hosted-video-height: 540px;
     }
 }
 
-.youtube__video-started:not(.youtube__video-paused) ~ .hosted-fading,
-.vjs-playing + .hosted-fading {
-    .hosted__meta,
-    .hostedbadge__logo,
-    .hosted__video-overlay {
-        @include hosted-fade-out;
+.hosted__youtube-video,
+.vjs-playing {
+    & ~ .hosted-fading {
+        .hosted__meta,
+        .hostedbadge__logo,
+        .hosted__video-overlay {
+            @include hosted-fade-out;
+        }
     }
 }
 
-.youtube__video-paused ~ .hosted-fading,
-.vjs-paused + .hosted-fading {
-    .hosted__meta,
-    .hostedbadge__logo,
-    .hosted__video-overlay {
-        @include hosted-fade-in;
+.hosted__youtube-video:not(.youtube__video-started),
+.youtube__video-paused,
+.youtube__video-ended,
+.vjs-paused {
+    & ~ .hosted-fading {
+        .hosted__meta,
+        .hostedbadge__logo,
+        .hosted__video-overlay {
+            @include hosted-fade-in;
+        }
     }
 }
 
@@ -533,12 +539,6 @@ $hosted-video-height: 540px;
 
 .hosted__youtube-video ~ .hosted-fading .hosted__video-overlay {
     pointer-events: none;
-}
-
-.youtube__video-started ~ .hosted-fading .hosted__video-overlay {
-    @include mq($until: tablet) {
-        display: none;
-    }
 }
 
 // Headings
