Fix wrong paths

--- a/commercial/app/views/jobs/jobs.scala.html
+++ b/commercial/app/views/jobs/jobs.scala.html
@@ -1,4 +1,4 @@
-@import model.commercial.JobSector
+@import model.commercial.jobs.JobSector
 @(jobs: Seq[model.commercial.Job],
   jobSectors: Seq[JobSector],
   omnitureId: Option[String],
