--- a/static/src/stylesheets/module/content/_live-blog.scss
+++ b/static/src/stylesheets/module/content/_live-blog.scss
@@ -437,12 +437,15 @@ $block-padding-right: $gs-gutter;
 }
 .tweet,
 .from-content-api blockquote.tweet {
-    @include fs-textSans(3);
+    // We're going to style this like the upgraded embed
+    font-family: Helvetica, Roboto, 'Segoe UI', Calibri, sans-serif;
+    font-size: 14px;
+    border: 1px solid $neutral-4;
+    border-radius: 4px;
+    padding: 20px;
+    // End tweet embed styles
+
     display: inline-block;
-    border-left-width: 0;
-    padding: $gs-baseline/2 $gs-gutter/2;
-    background-color: $neutral-6;
-    border-top: 1px solid $neutral-4;
     margin: 0;
     margin-bottom: $gs-baseline;
     font-style: normal;
@@ -473,15 +476,25 @@ $block-padding-right: $gs-gutter;
     display: none !important;
 }
 
-.tweet-user {
+.tweet__user-name,
+.tweet__user-id {
     display: inline-block;
-    font-weight: bold;
     padding-right: 40px;
-    padding-bottom: 1px;
     margin-bottom: 0;
     background-repeat: no-repeat;
     background-position-x: 100%;
 }
+
+.tweet__user-name {
+    display: block;
+    font-weight: bold;
+}
+
+.tweet__user-id {
+    color: #697882; // We're going to style this like the upgraded embed
+    margin-bottom: 20px;
+}
+
 
 .tweet-main-image {
     width: 100%;
@@ -489,11 +502,8 @@ $block-padding-right: $gs-gutter;
 }
 
 .tweet-date {
-    @include fs-textSans(1);
     display: block;
     color: $neutral-2;
-    padding-right: 40px;
-    margin-bottom: ($gs-baseline/3)*4;
 }
 
 .twitter-tweet {
